kubernetes-grafana/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ui
  namespace: monitoring
  labels:
    app.kubernetes.io/name: grafana-ui
spec:
  ingressClassName: nginx
  rules:
  - host: grafana.cloudstudent.shop
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: grafana
            port: 
              number: 3000
